# ParaviewFitsReader

./: .gitignore  CMakeLists.txt  README.md
Reader/: CMakeLists.txt  paraview.plugin
Reader/vtkFitsReader/: CMakeLists.txt  FitsReaderServerManager.xml  vtk.module  vtkFitsReader.cxx  vtkFitsReader.h
